# Smart_Contract_Examples

./: .gitignore  README.md
Algorand_Dapp/: index.html  payment.html
Algorand_Dapp/first-algorand-rust-transaction/: Cargo.toml
Algorand_Dapp/first-algorand-rust-transaction/src/: main.rs
BuildingEthereumDapps/: .gitignore  README.md  hardhat.config.js  package-lock.json  package.json  truffle-config.js
CardanoClientApp/: README.md  pom.xml
ComparativeAnalysisSmartContract/: .gitignore
Context-Based-CROP-Solidity/: README.md
ContextRolesContract/: package-lock.json  truffle-config.js
ContextRolesMediatorPattern/: package-lock.json  package.json  truffle-config.js
Decentralized_Supply_Chain_Management/: .gitignore  README.md
DelegateCallContract/: README.md  package-lock.json  package.json  truffle-config.js
DeployerJavaConnection/: README.md  package-lock.json  truffle-config.js
ERC165Concept/: package-lock.json  package.json
EthereumDapps/: README.md  app.js  config.json  deploycontract.js  package-lock.json  package.json
EthereumJSTx/: README.md
Factory-in-a-Box/: README.md  hardhat.config.js  package-lock.json  package.json
NethereumContracts/: NethereumContracts.csproj  Program.cs  README.md  ReadProperty.cs  SampleClass.cs
OracleKrakenContract/: truffle-config.js
Oracle_Contracts/: compile.sh  truffle-config.js
Oracle_External_Api/: README.md  client.js  package-lock.json  server.js  (+2 more)
SelfSovereignForWarehouseManagement/RustImplementation/: Cargo.toml  README.md
SelfSovereignForWarehouseManagement/RustImplementation/src/: main.rs
(+1169 files in other folders)
