cargo-features = ["edition2021"]

[package]
name = "RustImplementation"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
identity = { git = "https://github.com/iotaledger/identity.rs", branch = "main", features = ["account"]}
pretty_env_logger = { version = "0.4" }
tokio = { version = "1.14", features = ["full"] }